# RadSportKochGmbH

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  seed.py
app/: __init__.py
app/core/: config.py  enums.py  logging_config.py
app/database/: initializer.py  session.py
app/models/: __init__.py  customer.py  order.py  order_item.py  product.py
app/repositories/: customer_repository.py  dashboard_repository.py  order_repository.py  product_repository.py
app/schemas/: __init__.py  customer.py  dashboard.py  order.py  product.py
app/services/: customer_service.py  dashboard_service.py  exceptions.py  export_service.py  order_service.py  product_service.py  seed_service.py
app/ui/: application.py  main_window.py  styles.py
app/ui/dialogs/: confirm_dialog.py  customer_dialog.py  order_dialog.py  product_dialog.py
app/ui/views/: customer_detail_view.py  customers_view.py  dashboard_view.py  order_detail_view.py  orders_view.py  product_detail_view.py  products_view.py
app/ui/widgets/: card_widget.py  detail_card.py  empty_state.py  filter_bar.py  status_badge.py  table_widget.py
app/utils/: csv_export.py  filtering.py  formatters.py  status_helpers.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_order_service.py
