[project]
name = "radsportkochgmbh"
version = "0.1.0"
description = "Professionelle Desktop-Verwaltungssoftware für einen Fahrradladen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8.0",
    "PySide6-Fluent-Widgets>=1.11.2",
    "SQLAlchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
